deploy/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: katch
  labels:
    app.kubernetes.io/name: katch
    app.kubernetes.io/instance: katch
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: katch
    app.kubernetes.io/instance: katch
